# eggplant_transpiler

./: .gitignore  CODEGEN_ANALYSIS.md  Cargo.toml  README.md  code.lisp  compile_test.rs  debug_parse.rs  debug_query.rs  memory_dump.md  test_basic_type_filter.rs  test_devalue_example.rs  test_devalue_simple.rs  test_devalue_zero.rs  test_equality_rule.rs  test_normalize  test_normalize.rs  test_pat_vars_devalue.rs  test_query_pattern.rs  test_question_mark.rs  test_transpiler.rs
examples/: benchmark_example.rs  eggplant_example.rs  parse_example.rs  sort_test.egg  sort_with_constructor.egg  test_sort.rs  test_sort_with_constructor.rs
src/: codegen.rs  eggplant.rs  lib.rs  main.rs
src/ast/: expr.rs  mod.rs  parse.rs
test_crate/: Cargo.toml
test_crate/src/: main.rs
