[package]
name = "eggplant_transpiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ordered-float = "4.2"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.10"

[[bin]]
name = "compile_test"
path = "compile_test.rs"

[[bin]]
name = "test_transpiler"
path = "test_transpiler.rs"
